# shadow

./: CMakeLists.txt  README.md
map_parcing/: a.out  config.sql  links  map.py  map_structure.cc  output_data.csv  output_data.xlsx  shadow.ipynb  tables_create.sql
map_parcing/database/: db_install.py  shadow.db  shadow.ipynb  shadow.py  tables_create.sql
map_parcing/database/data_examples/: FootPath.txt  RelBuildings.txt  WayBuildings.txt  rectangle_output.txt  shadow.ipynb
map_parcing/database/queries/: build.sql  build_avg.sql  empty_build.sql  ex.sql  highway_keys.sql  rectangle.sql  tables_create.sql  views_create.sql
map_parcing/database/tests/: members_test.txt  node_tags_test.txt  nodes_test.txt  rel_tags_test.txt  relations_test.txt  way_nodes_test.txt  way_tags_test.txt
map_parcing/examples/: database.ipynb  links  mysql_example.ipynb
map_parcing/structure/: dejkstra.hpp  map_structure.cc  structure.cc  structure.hpp
map_parcing/tests/: node_tags_test.txt  way_test.txt  ways_test.txt
shadows_calc/: bd_old.hpp  csv.hpp  db.cpp  db.hpp  delaunator.hpp  grid.cpp  grid.hpp  map_data.ipynb  map_graph.ipynb  map_graph_2.ipynb  output_data.csv  output_data_2.csv  shadows.cpp  solar.hpp  triangulation.hpp
